@@ -1,4 +1,6 @@
 DIST tudu-0.3.2.tar.gz 35929 RMD160 ffcf91520fef673efe6a2aedb519d952fc9f7dea SHA1 df7382b0d34ceda2907dc019414fd797464ccd69 SHA256 21bc69257efc25f4e5aa0a5a30f90e8cd42674d178bc46ebc819a33645a983e1
+DIST tudu-0.4.tar.gz 39311 RMD160 6f59261ceb67b541f45dccc10240827289c05015 SHA1 0d86597479f859aba50d22ae6329f9c4890756e1 SHA256 9c027feb694466f5dc41bf6bea711b489551c19587414a7e0a99788b876de8b7
 EBUILD tudu-0.3.2-r2.ebuild 702 RMD160 6df71c9d4afcaeaa79672fa833132ddc23d1a2e8 SHA1 09dc21ccd019ad6923b11ad189de3d1192a668cd SHA256 60ed9a74b1b86e49a7a3927c99229b181e69f811f734fd8d05f3e69175e47c49
-MISC ChangeLog 495 RMD160 37b2d8517cf40a0b3b12eb1d567893d5747ad563 SHA1 5d3aa74387c371387e1b4c2c7572856ddcdf43a8 SHA256 493233de9bae46ef25af96c378d498508885fb4b464f6876c524b509f3d7ea0d
+EBUILD tudu-0.4.ebuild 594 RMD160 5c362618d5dec952e7c041fb4c26e1046493c78a SHA1 4cbec55182f3a820d53683da23f738c97fb69cb8 SHA256 cdfce98544235221aa65afd4de1b296f1229957c9a86838c9c6ff648bc8a689b
+MISC ChangeLog 607 RMD160 72fe11c41eb59fe20cac0daa0bff921b1fef41c7 SHA1 8ef5976f1ea32f5c729b9815f3335650c22ad642 SHA256 a5005f63e990fc53e066dc901c9bc6ffaf8669c94435fa4a5203a696725c6e68
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
